test/org/midica/testfiles/failing/compact-unknown-option.midica
INCLUDE inc/instruments.midica

0: c c (v=127,l=text,d=50%) c (unk=1) c
